--- a/brinkwood.html
+++ b/brinkwood.html
@@ -811,7 +811,7 @@
   </div>
   <div class="type-mask mask grid">
     <div class="playbook sheet-2col flex">
-      <input class="label masktype" type="text" value="" spellcheck="false" name="attr_mask_type" data-i18n-placeholder="mask"/>
+      <input class="label masktype" type="text" value="" spellcheck="false" name="attr_mask_type" data-i18n-placeholder="mask" onkeyup="return forceUpper(this);"/>
       <textarea class="label" spellcheck="false" name="attr_mask_description" data-i18n-placeholder="mask_description"></textarea>
       <input class="hider" type="hidden" name="attr_show_playbook_reminder" value="1"/>
       <div class="reminder"><span data-i18n="autofill_reminder_mask"></span><br/><span data-i18n="list_masks"></span></div>
@@ -1838,6 +1838,17 @@
       const match = (event.newValue || "").match(RE);
       if (match) setAttr("chat_image", `${match[1]}/thumb.${match[2]}`);
     }
+    /**
+     * Force the mask type to lower case for css handling purposes
+     */
+    function maskTypeToLowerCase(){
+      getAttrs(["mask_type"], (v) => {
+          // Get value
+          const value = v.mask_type;
+          // change value to lowercase and set it to the attribute
+          setAttr("mask_type", value.toLowerCase());
+      });
+    }
     function handlePlaybookFill(event) {
       getAttrs(
         [
@@ -2623,6 +2634,8 @@
     /* EVENT HANDLERS */
     /* Set default fields when setting mask type */
     on("change:mask_type", (e) => {
+        // force the value to uppercase
+        maskTypeToLowerCase();
         handlePlaybookFill(e);
     })
     on("change:repeating_maskability:name", () =>
