Remove superfluous function.

--- a/brinkwood.html
+++ b/brinkwood.html
@@ -811,7 +811,7 @@
   </div>
   <div class="type-mask mask grid">
     <div class="playbook sheet-2col flex">
-      <input class="label masktype" type="text" value="" spellcheck="false" name="attr_mask_type" data-i18n-placeholder="mask" onkeyup="return forceUpper(this);"/>
+      <input class="label masktype" type="text" value="" spellcheck="false" name="attr_mask_type" data-i18n-placeholder="mask"/>
       <textarea class="label" spellcheck="false" name="attr_mask_description" data-i18n-placeholder="mask_description"></textarea>
       <input class="hider" type="hidden" name="attr_show_playbook_reminder" value="1"/>
       <div class="reminder"><span data-i18n="autofill_reminder_mask"></span><br/><span data-i18n="list_masks"></span></div>
