--- a/brinkwood.html
+++ b/brinkwood.html
@@ -837,7 +837,7 @@
 
     </div>
     <div class="attribute">
-      <input class="masktype" type="hidden" name="attr_mask_type" value="-"/>
+      <input class="masktype" type="hidden" name="attr_mask_type" value=""/>
       <div class="attribute-title flex blackheader" style="width: 115%;">
         <div class="label" data-i18n="mask"></div>
       </div>
@@ -2420,7 +2420,7 @@
           "frighten", "awe", "disarm", "explode",
           "slaughter", "carnage", "direct", "cover",
           "rouse", "burn", "explode", "provoke",
-          "drain", "vivisect", "suture", "tend",
+          "exsanguinate", "vivisect", "suture", "tend",
           "snipe", "scout", "read", "slip",
         ]
     };
